--- a/templates/usuarios.html
+++ b/templates/usuarios.html
@@ -1,28 +1,31 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1 class="text-center">{% block title %} Usuario {% endblock %}</h1>
+    <h1 class="text-center">{% block title %} Usuários {% endblock %}</h1>
 
     <div class="container">
         <div class="row">
             {% for dado in dados %}
             <div class="col-md-3 mb-4">
-                <div class="card text-white bg-primary mb-3">
-                    <div class="card-header">{{ dado.login }}
+                <div class="card text-white bg-primary mb-3" style="position: relative;">
+                    <div class="card-icons" style="position: absolute; top: 10px; right: 10px;">
+                        <form action="{{ url_for('routes.handle_usuario', usuario_id=dado.id) }}" method="GET" style="display:inline;">
+                            <button type="submit" class="btn-transparent">
+                                <img src="{{ url_for('static', filename='icons/edit.png') }}" alt="Edit" width="20" height="20">
+                            </button>
+                        </form>
                         <form action="{{ url_for('routes.handle_usuario', usuario_id=dado.id) }}" method="POST" style="display:inline;">
                             <input type="hidden" name="_method" value="DELETE">
                             <button type="submit" class="btn-transparent">
                                 <img src="{{ url_for('static', filename='icons/delete.png') }}" alt="Delete" width="20" height="20">
                             </button>
                         </form>
-                        <form action="{{ url_for('routes.handle_usuario', usuario_id=dado.id) }}" method="GET" style="display:inline;">
-                            <button type="submit" class="btn-transparent">
-                                <img src="{{ url_for('static', filename='icons/edit.png') }}" alt="Edit" width="20" height="20">
-                            </button>
-                        </form>
-                        
+                    </div>
+                    <div class="card-header" style="color: black;">
+                        {{ dado.login }}
                     </div>
                     <div class="card-body">
+                        <p class="card-text">Login: {{ dado.login }}</p>
                         <p class="card-text">Senha: {{ dado.senha }}</p>
                         <p class="card-text">Nome: {{ dado.nome_real }}</p>
                         <p class="card-text">Status: {{ dado.status_label }}</p>
