--- a/templates/login.html
+++ b/templates/login.html
@@ -25,6 +25,9 @@
                 <button type="submit" class="btn btn-primary">Entrar</button>
                 <a href="{{ url_for('routes.register') }}" class="btn btn-secondary">Registrar</a>
             </div>
+            <div class="mt-3 text-center">
+                <a href="{{ url_for('routes.forgot_password') }}">Esqueci minha senha</a>
+            </div>            
         </fieldset>
     </form>
 </div>
