--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -2,16 +2,16 @@
 
 {% block content %}
 <div class="container">
-    <h2 class="text-center">Redefinir Senha</h2>
-    <p class="text-center">Digite uma nova senha para sua conta:</p>
+    <h2 class="text-center">{{ _('Redefinir Senha') }}</h2>
+    <p class="text-center">{{ _('Digite uma nova senha para sua conta') }}:</p>
 
     <form method="POST" class="mt-4">
         <div class="form-group">
-            <label for="password" class="form-label">Nova Senha</label>
+            <label for="password" class="form-label">{{ _('Nova senha') }}/label>
             <input type="password" id="password" name="password" class="form-control" required>
         </div>
         <div class="text-center mt-4">
-            <button type="submit" class="btn btn-primary">Redefinir</button>
+            <button type="submit" class="btn btn-primary">{{ _('Redefinir') }}</button>
         </div>
     </form>
 </div>
