--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -2,16 +2,16 @@
 
 {% block content %}
 <div class="container">
-    <h2 class="text-center">Recuperação de Senha</h2>
-    <p class="text-center">Digite seu email para receber o link de redefinição de senha:</p>
+    <h2 class="text-center">{{ _('Recuperação de Senha') }}</h2>
+    <p class="text-center">{{ _('Digite seu email para receber o link de redefinição de senha:') }}</p>
 
     <form method="POST" class="mt-4">
         <div class="form-group">
-            <label for="email" class="form-label">Email</label>
+            <label for="email" class="form-label">{{ _('Email') }}</label>
             <input type="email" id="email" name="email" class="form-control" required>
         </div>
         <div class="text-center mt-4">
-            <button type="submit" class="btn btn-primary">Enviar</button>
+            <button type="submit" class="btn btn-primary">{{ _('Enviar') }}</button>
         </div>
     </form>
 </div>
