--- a/templates/login.html
+++ b/templates/login.html
@@ -2,31 +2,31 @@
 
 {% block content %}
 <div class="container">
-    <h2 class="text-center">Login</h2>
+    <h2 class="text-center">{{ _('Entrar') }}</h2>
 
     <div class="text-center">
-        <a href="{{ url_for('google.login') }}" class="btn btn-primary">Entrar com Google</a>
-        <a href="{{ url_for('github.login') }}" class="btn btn-dark">Entrar com GitHub</a>
+        <a href="{{ url_for('google.login') }}" class="btn btn-primary">{{ _('Entrar com Google') }}</a>
+        <a href="{{ url_for('github.login') }}" class="btn btn-dark">{{ _('Entrar com GitHub') }}</a>
     </div>
 
-    <p class="text-center mt-3">Ou faça login com seu email e senha:</p>
+    <p class="text-center mt-3">{{ _('Ou faça login com seu email e senha:') }}</p>
 
     <form action="{{ url_for('routes.login') }}" method="POST">
         <fieldset>
             <div>
-                <label for="login" class="form-label mt-4">Login (Email)</label>
+                <label for="login" class="form-label mt-4">{{ _('Entrar (email)') }}</label>
                 <input type="email" class="form-control" id="login" name="login" required>
             </div>
             <div>
-                <label for="password" class="form-label mt-4">Senha</label>
+                <label for="password" class="form-label mt-4">{{ _('Senha') }}</label>
                 <input type="password" class="form-control" id="password" name="senha" required>
             </div>
             <div class="mt-4 text-center">
-                <button type="submit" class="btn btn-primary">Entrar</button>
-                <a href="{{ url_for('routes.register') }}" class="btn btn-secondary">Registrar</a>
+                <button type="submit" class="btn btn-primary">{{ _('Entrar') }}</button>
+                <a href="{{ url_for('routes.register') }}" class="btn btn-secondary">{{ _('Registrar') }}</a>
             </div>
             <div class="mt-3 text-center">
-                <a href="{{ url_for('routes.forgot_password') }}">Esqueci minha senha</a>
+                <a href="{{ url_for('routes.forgot_password') }}">{{ _('Esqueci minha senha') }}</a>
             </div>            
         </fieldset>
     </form>
