new base for coding added
added a new base for new coding, it needs correction

--- a/templates/usuario.html
+++ b/templates/usuario.html
@@ -25,6 +25,7 @@
                     <p class="card-text">{{ _('Entrar') }}: {{ usuario['login'] }}</p>
                     <p class="card-text">{{ _('Senha') }}: {{ usuario['senha'] }}</p>
                     <p class="card-text">{{ _('Nome') }}: {{ usuario['nome_real'] }}</p>
+                    <p class="card-text">{{ _('Cargo') }}: {{ usuario['role'] }}</p>
                     <p class="card-text">
                         Status: 
                         {% if usuario['status'] == 1 %}
