--- a/templates/edit_usuario.html
+++ b/templates/edit_usuario.html
@@ -18,6 +18,10 @@
                 <label for="exampleTextarea" class="form-label mt-4">{{ _('Nome') }}</label>
                 <textarea class="form-control" id="exampleTextarea" name="nome_real" rows="1" required>{{ usuario['nome_real'] }}</textarea>
             </div>
+            <div>
+                <label for="exampleTextarea" class="form-label mt-4">{{ _('Cargo') }}</label>
+                <textarea class="form-control" id="exampleTextarea" name="role" rows="1" required>{{ usuario['role'] }}</textarea>
+            </div>
             <fieldset>
                 <legend class="mt-4">Status</legend>
                 <div class="form-check">
