--- a/templates/usuarios.html
+++ b/templates/usuarios.html
@@ -29,7 +29,7 @@
                         <p class="card-text">{{ _('Senha') }}: {{ dado.senha }}</p>
                         <p class="card-text">{{ _('Nome') }}: {{ dado.nome_real }}</p>
                         <p class="card-text">{{ _('Situação') }}: {{ dado.status_label }}</p>
-                        <p class="card-text">{{ _('Cargo') }}: {{ dado.cargo }}</p>
+                        <p class="card-text">{{ _('Cargo') }}: {{ dado.cargo_label }}</p>
                         <p class="card-text">{{ _('Criação') }}: {{ dado.created }}</p>
                         <p class="card-text">{{ _('Modificação') }}: {{ dado.modified }}</p>
                     </div>
