--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     
     {% block styles %}
         <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/bootstrap.min.css')}}">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     {% endblock %}
     {% endblock %}
 </head>
@@ -27,6 +28,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/usuarios">{{ _('Usuários') }}</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/livros">{{ _('Livros') }}</a>
                     </li>
                 </ul>
             </div>
