--- a/templates/register.html
+++ b/templates/register.html
@@ -14,8 +14,15 @@
                 <input type="password" class="form-control" id="password" name="senha" required>
             </div>
             <div>
-                <label for="exampleTextarea" class="form-label mt-4">{{ _('Cargo') }}</label>
-                <textarea class="form-control" id="exampleTextarea" name="role" rows="1" required>{{ usuario['role'] }}</textarea>
+                <label class="form-label mt-4">{{ _('Cargo') }}</label>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="cargo" id="admin" value="1" required>
+                    <label class="form-check-label" for="admin">{{ _('Administrador') }}</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="cargo" id="member" value="0" required>
+                    <label class="form-check-label" for="member">{{ _('Membro') }}</label>
+                </div>
             </div>
             <div>
                 <label for="nome_real" class="form-label mt-4">{{ _('Nome Completo') }}</label>
